--- a/views/pages/register.handlebars
+++ b/views/pages/register.handlebars
@@ -1,3 +1,5 @@
+
+{{> _errors}}
 <div class="card">
   <h5 class="card-header">
     Register To Your Account
@@ -6,9 +8,9 @@
       <form action="/register" method="POST">
   <div class="form-group">
       <label for="username">username</label>
-      <input type="text" name="username" id ="username" class ="form-control" placeholder="Username" >
+      <input type="text" name="username" id ="username" class ="form-control" placeholder="Username" value = "{{username}}">
       <label for="username">password</label>
-      <input type="password" name="password" id ="password" class ="form-control" placeholder="password" >
+      <input type="password" name="password" id ="password" class ="form-control" placeholder="password" value = "{{password}}">
   </div>
   <button type ="submit" class="btn btn-danger btn-block">Register</button>
       </form>
